--- a/src/styles.css
+++ b/src/styles.css
@@ -1,17 +1,17 @@
 :root {
-    --bright-blue: hsl(220, 98%, 61%);
-    --very-light-gray: hsl(0, 0%, 98%);
-    --very-light-grayish-blue: hsl(236, 33%, 92%);
-    --light-grayish-blue: hsl(233, 11%, 84%);
-    --dark-grayish-blue: hsl(236, 9%, 61%);
-    --very-dark-grayish-blue: hsl(235, 19%, 35%);
-    --very-dark-blue: hsl(235, 21%, 11%);
-    --very-dark-desaturated-blue: hsl(235, 24%, 19%);
-    --light-grayish-blue: hsl(234, 39%, 85%);
-    --light-grayish-blue-hover: hsl(236, 33%, 92%);
-    --dark-grayish-blue: hsl(234, 11%, 52%);
-    --very-dark-grayish-blue: hsl(233, 14%, 35%);
-    --very-dark-grayish-blue: hsl(237, 14%, 26%);
+    --active-sorting-option: hsl(220, 98%, 61%);
+    --main-background: hsl(0, 0%, 98%);
+    --tasks-background: hsl(236, 33%, 92%);
+    --text-color: hsl(233, 11%, 84%);
+    --crossed-off-task: hsl(236, 9%, 61%);
+    --input-text: hsl(235, 19%, 35%);
+    --main-background: hsl(235, 21%, 11%);
+    --tasks-background: hsl(235, 24%, 19%);
+    --text-color: hsl(234, 39%, 85%);
+    --text-color-hover: hsl(236, 33%, 92%);
+    --input-text: hsl(234, 11%, 52%);
+    --info-items: hsl(233, 14%, 35%);
+    --crossed-off-task: hsl(237, 14%, 26%);
 }
 
 * {
@@ -22,7 +22,9 @@
 }
 
 body {
-    background-color: var(--very-dark-blue);
+    background-color: var(--main-background);
+    display: flex;
+    flex-direction: column;
     min-height: 100svh;
     padding: 2rem;
 }
@@ -45,19 +47,119 @@ body {
 }
 
 .todo__header-title {
-    color: var(--very-light-grayish-blue);
+    color: var(--text-color-hover);
     letter-spacing: 0.8rem;
 }
 
 .todo__add-task {
-    background-color: var(--very-dark-desaturated-blue);
+    background-color: var(--tasks-background);
+    border-radius: 5px;
+    margin-bottom: 1rem;
+    position: relative;
+}
+
+#todo__add-task-check {
+    border: 1px solid var(--crossed-off-task);
+    border-radius: 50%;
+    color: var(--tasks-background);
+    cursor: pointer;
+    font-size: 0.8rem;
+    left: 1.2rem;
+    padding: 0.3rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.todo__add-task-input {
+    background-color: var(--tasks-background);
+    border: none;
+    border-radius: 5px;
+    color: var(--input-text);
+    outline: none;
+    padding: 1rem;
+    padding-left: 4.5rem;
+    transition: outline 0.3s ease;
+    width: 100%;
+}
+
+.todo__add-task-input:focus-visible {
+    outline: 1px solid var(--text-color);
+}
+
+.todo__task-list {
+    background-color: var(--tasks-background);
+    border-radius: 5px;
+    color: var(--text-color);
+    list-style: none;
+    margin-bottom: 1rem;
+}
+
+.todo__task {
+    font-size: 0.8rem;
+    margin-left: 3rem;
+    position: relative;
+    padding: 1.5rem;
+}
+
+#todo__task-check {
+    border: 1px solid var(--crossed-off-task);
+    border-radius: 50%;
+    color: var(--tasks-background);
+    cursor: pointer;
+    left: -1.8rem;
+    padding: 0.3rem;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#todo__task-cross {
+    color: var(--crossed-off-task);
+    cursor: pointer;
+    font-size: 1rem;
+    position: absolute;
+    right: 1rem;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+.todo__task::after {
+    border: 1px solid var(--crossed-off-task);
+    bottom: 0;
+    content: '';
+    left: -3rem;
+    padding: 0 0 0 46px;
+    position: absolute;
+    width: 100%;
+}
+
+.todo__task-list-info {
+    align-items: center;
+    display: flex;
+    color: var(--info-items);
+    font-size: 0.8rem;
+    justify-content: space-between;
+    padding: 1.2rem;
+}
+
+.todo__choose-tasks {
+    background-color: var(--tasks-background);
+    border-radius: 5px;
+    color: var(--input-text);
+    display: flex;
+    font-size: 0.8rem;
+    justify-content: space-evenly;
+    padding: 1rem;
 }
 
 .attribution { 
+    color: var(--info-items);
     font-size: 11px; 
+    margin-top: auto;
     text-align: center; 
 }
 
 .attribution a { 
-    color: hsl(228, 45%, 44%); 
+    color: var(--input-text); 
 }
