--- a/src/styles.css
+++ b/src/styles.css
@@ -107,11 +107,13 @@ body {
     border-radius: 50%;
     cursor: pointer;
     font-size: 1rem;
+    height: 1.7rem;
     left: -1.8rem;
     padding: 0.3rem;
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
+    width: 1.7rem;
 }
 
 .todo__task-check {
@@ -124,11 +126,11 @@ body {
 }
 
 .todo__task-checked ~ .todo__task-text {
-    color: var(--input-text);
+    color: var(--info-items);
     text-decoration: line-through;
 }
 
-#todo__task-cross {
+.todo__task-cross {
     color: var(--crossed-off-task);
     cursor: pointer;
     font-size: 1rem;
@@ -160,6 +162,10 @@ body {
     padding: 1.2rem;
 }
 
+.todo__task-clear-completed {
+    cursor: pointer;
+}
+
 .todo__choose-tasks {
     background-color: var(--tasks-background);
     border-radius: 5px;
@@ -168,6 +174,10 @@ body {
     font-size: 0.8rem;
     justify-content: space-evenly;
     padding: 1rem;
+}
+
+.todo__choose-tasks > span {
+    cursor: pointer;
 }
 
 .attribution { 
@@ -179,4 +189,67 @@ body {
 
 .attribution a { 
     color: var(--input-text); 
+}
+
+@media screen and (min-width: 600px) {
+    
+    body {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .todo__background {
+        background: no-repeat url(../images/bg-desktop-dark.jpg) center/cover;
+    }
+
+    .todo__app,
+    .todo__header {
+        max-width: 600px;
+        width: 80% 
+    }
+
+    .todo__header {
+        margin-top: auto;
+    }
+
+    .todo__app {
+        position: relative;
+    }
+
+    .todo__choose-tasks {
+        left: 50%;
+        position: absolute;
+        transform: translate(-50%, -145%);
+        width: 40%;
+    }
+    
+    .todo__task-cross {
+        font-size: 1.5rem;
+        opacity: 0;
+    }
+
+    .todo__task-text:hover {
+        cursor: pointer;
+    }
+
+    .todo__task:hover > .todo__task-cross {
+        opacity: 1;
+    }
+
+    .todo__task-check:hover {
+        background: linear-gradient(hsl(192, 100%, 67%), hsl(280, 87%, 65%));
+    }    
+
+    .todo__task-check:hover::after {
+        background-color: var(--tasks-background);
+        border-radius: 50%;
+        content: '';
+        height: 93%;
+        left: 49%;
+        position: absolute;
+        top: 49%;
+        transform: translate(-50%, -50%);
+        width: 93%;
+    }
+
 }
